--- a/template.yaml
+++ b/template.yaml
@@ -3,9 +3,9 @@ Transform: 'AWS::Serverless-2016-10-31'
 Description: A starter AWS Lambda function.
 Metadata:
   AWS::ServerlessRepo::Application:
-    Name: python-app
+    Name: python-
     Description: hello world
-    Author: Tejas Gupta
+    Author: smithcloud
     SpdxLicenseId: Apache-2.0
     LicenseUrl: LICENSE.txt
     ReadmeUrl: README.md
@@ -21,7 +21,7 @@ Resources:
     Type: 'AWS::Serverless::Function'
     Properties:
       Handler: lambda_function.lambda_handler
-      Runtime: python3.6
+      Runtime: python3.13
       CodeUri: .
       Description: A starter AWS Lambda function.
       MemorySize: 128
